[package]
name = "pandoc-katex"
version = "0.1.10"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pandoc filter to render math equations using KaTeX"
repository = "https://github.com/xu-cheng/pandoc-katex"
readme = "README.md"
keywords = ["LaTeX", "KaTeX", "Math", "Pandoc"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[target.'cfg(any(unix, all(windows, target_env = "gnu")))'.dependencies]
katex = "0.4"

[target.'cfg(not(any(unix, all(windows, target_env = "gnu"))))'.dependencies]
katex = { version = "0.4", default-features = false, features = ["duktape"] }
